--- a/docs/references.bib
+++ b/docs/references.bib
@@ -408,6 +408,28 @@ TOR, reverse govern-print mention
 	note = {\\(Accessed on 2019-02-13)},
 }
 
+@misc{bip:0112:sequence:lock:time:soft:fork,
+	author = {BtcDrak and Freienbach, Mark and Lombrozo, Eric},
+	title = "BIP 0112 CHECKSEQUENCEVERIFY"
+	year = "2015",
+	month = "august",
+	day = "10",
+	howpublished = {
+		\url{https://github.com/bitcoin/bips/blob/master/bip-0112.mediawiki}},
+	note = {\\(Accessed on 2019-02-18)},
+}
+
+@misc{bip:0113:median:time:passed,
+	author = {Kerin, Thomas	and Freienbach, Mark},
+	title = "BIP 0113 Median time-past as endpoint for lock-time calculations"
+	year = "2015",
+	month = "august",
+	day = "10",
+	howpublished = {
+		\url{https://github.com/bitcoin/bips/blob/master/bip-0113.mediawiki}},
+	note = {\\(Accessed on 2019-02-18)},
+}
+
 @misc{bip,
 	author = {},
 	title = {Bitcoin improvement proposals },
