--- a/docs/macroeconomics.tex
+++ b/docs/macroeconomics.tex
@@ -124,7 +124,6 @@ The dollar was re-pegged multiple times between 1968-1971 as part of the Nixon c
 	\label{fig:gold:price:major:currency}
 \end{figure}
 
-
 \twocolumn
 
 \begin{table}[!htb]
@@ -163,7 +162,7 @@ The economic system built upon fiat currencies are based on the trust in the iss
 In many ways it helps to think of bitcoin as both a bearer instrument and as a monetary policy and how the system is designed as such. This section is an incomplete view on it's own and for further reading these recommendations are good starting points: 
 
 \begin{itemize}
-	\item Nick Szabo's blog Enumerated and above cited Shelling out\cite{szabo:shelling:out}.
+	\item Nick Szabo's blog Enumerated and above cited Shelling out\cite{szabo:shelling:out}\cite{szabo:unenumerated}.
 	\item Saifedean Ammous's The bitcoin standard.\cite{ammous:bitcoin:standard}
 	\item Waren Weber's paper A bitcoin standard.\cite{weber:bitcoin:standard}
 \end{itemize}
