--- a/docs/bitcoin.tex
+++ b/docs/bitcoin.tex
@@ -21,7 +21,8 @@ Bitcoin is essentially a long ledger of inputs and outputs. Note that the whole 
 
 \section{The Double-Spending problem}
 
-While digital signatures are able prove ownership of bitcoin. There is nothing to stop the owner of an amount of bitcoin to sign two different transactions spending the same transaction output and broadcasting them to different parts of the network. This is called the double-spending problem which is a variation of the more general Byzantine's General Problem. The network reaches a coherent global view over the  transaction history by a method known as \textit{Proof-of-work}. The Bitcoin \textit{Proof-of-work} algorithm is very similar to that of Hashcash as it uses a hash-based cost function which requires a selected amound of work and the proof of the work being cheap to verify.
+While digital signatures are able prove ownership of bitcoin. There is nothing to stop the owner of an amount of bitcoin to sign two different transactions spending the same transaction output and broadcasting them to different parts of the network. This is called the double-spending problem which is a variation of the more general Byzantine's General Problem. The network reaches a coherent global view over the transaction history by a method known as \textit{Proof-of-work}. The Bitcoin \textit{Proof-of-work} algorithm is very similar to that of hashcash as it uses a hash-based cost function which requires a selected amount of work and the proof of the work easy to verify\cite{back:hashcash}\footnote{It's similar to hashcash in both being hash-based with a cost function that is non-interactive, publicly auditable, trapdoor-free and have an unbounded probabilistic cost\cite{back:hashcash}.
+Bitcoin uses the double \texttt{SHA256} hash function.}..
 
 The \textit{Proof-of-work} algoithm is directly tied into the bitcoin transaction history data structure composite of a chain of blocks as seen in figure \ref{fig:blockchain}.
 
@@ -29,22 +30,13 @@ The \textit{Proof-of-work} algoithm is directly tied into the bitcoin transactio
 	\hspace*{-0.4cm} 
 	\centering
 	\includegraphics[width=10cm]{blockchain.png}
-	\caption{\textit{Three blocks linked by the hash of the previous block's header. Only the content in the header is immutable without redoing the \textit{Proof-of-work}
+	\caption{\textit{Three blocks linked by the hash of the previous block's header. Only the content in the header is immutable without redoing the \textit{Proof-of-work}.
 	}}
 	\label{fig:blockchain}
 	\hspace{2mm} 
 \end{figure}
 
-IN UNI
-The work in the algorithm is to find a sufficiently small hash of the previous block's header. A hash is valid if it's smaller than a number imposted by a difficulty target. There is no way to reverse engineer a sufficient hash and the algorithm repeatedly hashes the block header, changing the nonce, until a hash is found. The consensus is reached by regarding the longest chain of work to be valid. The blocks are in a sense chained through these hashed headers and each additional block adds cumulative work on the blocks below reducing the chance of ever being reverted.
-
-The blocks are chained through the hash of the previous block's header. A block is only valid if the hash is lower than an number imposed by the difficulty target. The hash is deterministic but for all intents and purposes it is random and to find a valid hash one simply hashes the header until a valid hash is found. This process is known as \textbf{mining}. The difficulty target adjusts every 2015th\footnote{This is off by one bug, 2016 blocks is two weeks} block\cite{repository:bitcoin} and forces the average time for a block to be mined to always be ten minutes. This sort of design is known as \textit{Proof-of-Work} and bitcoin differentiate from previous implementations with the difficulty adjustment\cite{back:hashcash}\footnote{Bitcoin uses the dubble \texttt{SHA256} hash, it is essentially the same as hashcash in the cost function being non-interactive, publicly auditable, trapdoor-free and unbounded probabilistic cost\cite{back:hashcash}.}.
-END UNI
-BEGIN PREV
-The blocks are chained through the hash of the previous block's header. A block is only valid if the hash is less than an number imposed by the difficulty target. There is no known way to reverse engineer a valid hash and to find a valid hash one has to repeatably hash the header, changing the nonce, until a sufficient hash is found. When a hash is found it can be verified by all other nodes who only need to hash it once for verification. This process is known as \textit{Proof-of-Work} generally and \textit{mining} specifically for bitcoin drawing from the similarities between the physical labor required to mint gold coins. The difficulty target adjusts every 2015th\footnote{This is a off by one bug, 2016 blocks is two weeks} block\cite{repository:bitcoin} and forces the average time for a block to be mined to always be around ten minutes. Bitcoin is not the first attempt at creating a currency based on \textit{Proof-of-Work} and differentiate from previous implementations with the difficulty adjustment\cite{back:hashcash}\footnote{Bitcoin uses the double \texttt{SHA256} hash, it is inspired by hashcash and is very similar to hashcash in the cost function is non-interactive, publicly auditable, trapdoor-free and have an unbounded probabilistic cost\cite{back:hashcash}.}.
-
-The double-spending problem is solved with a simple consensus rule stating that all nodes agree that the longest chain of work is the valid chain and a shared transaction history. The more blocks chained after the block with a transaction, the less the chance of that transaction ever being reverted. Even if blocks are found simultaneously creating a tie, the next block will break the tie and consensus forms again.
-END PREV
+The 'work' part of the algorithm is to find a sufficiently small hash of the previous block's header. A hash is valid if it's smaller than a number imposed by a difficulty target. There is no way to reverse engineer a sufficient hash and the algorithm repeatedly hashes the block header, changing the nonce, until a hash is found. Consensus is reached by regarding the longest chain of work to be the valid chain. The blocks are in a sense chained through these hashed headers and each additional block adds cumulative work on the blocks below reducing the chance of ever being reverted. The difficulty target adjusts every 2015th\footnote{This is off by one bug, 2016 blocks is two weeks} block\cite{repository:bitcoin} as part of the consensus algorithm and forces the average time between blocks to always be ten minutes. Running the bitcoin \textit{Proof-of-work} algorithm is known as \textit{mining} as per the similarities with the finding and minting of gold coins.
 
 \subsection{Merkle Tree}
 
@@ -52,7 +44,7 @@ END PREV
 	
 	\centering
 	\includegraphics[width=7cm]{merkle.png}
-	\caption{\textit{A merkle tree resulting from a four transactions A, B, C, D.
+	\caption{\textit{A merkle tree resulting from four transactions A, B, C, D.
 	}}
 	\label{fig:merkle:tree}
 	
@@ -62,7 +54,7 @@ The content in the block header is practically immutable since a change would ma
 
 \subsection{Incentive}
 
-The miners are incentivized by receiving the transaction fees from the transactions included in its block as well as a subsidy. The subsidy is on the form a coinbase transacion which has only outputs, this is how new bitcoin is minted. Every fourth year the subsidy halves and by 2140 will be zero. The miner must follow the consensus rules and mined blocks not following the rules will not be propagated through the network causing the miner to loose out on the block reward. A miner controlling more than 50\% of the hashing power could technically double-spend transactions by mining blocks on an own chain without publishing them and spending on the other chain and then publish the own longer chain. A huge problem with such an attack is that the confidence of the network would decrease causing the value of the 'stolen' bitcoin to be close the worthless and still owning a lot of specialized hardware, only capable of running the \texttt{SHA256} hashing algorithm, that is worthless without the network. In a sense such an attack would cause mutual destruction for both the network and the attacker. 
+The miners are incentivized by receiving the transaction fees from the transactions included in its block as well as a subsidy. The subsidy is on the form a coinbase transacion which has only outputs, this is how new bitcoin is minted. Every fourth year the subsidy halves and by 2140 will be zero. The miner must follow the consensus rules and mined blocks not following the rules will not be propagated through the network causing the miner to loose out on the block reward. A miner controlling more than 50\% of the hashing power could technically double-spend transactions by mining blocks on an own chain without publishing them and spending on the other chain and then publish the own longer chain. A huge problem with such an attack is that the confidence in the network would decrease causing the value of the 'stolen' bitcoin to be close the worthless and the attacker still owns a lot of specialized hardware, only capable of running the \texttt{SHA256} hashing algorithm, that is worthless without the network. In a sense such an attack would cause mutual destruction for both the network and the attacker. 
 
 \section{Script}
 \label{sec:script}
@@ -88,7 +80,6 @@ The two scripts added together forms a predicate. If the predicate is true the t
 
 The Pay-to-Public-key-hash or P2PKH for short was the standard script for a long time. It allows only the owner of 
 the private key to the public key to spend the output.
-
 
 \begin{figure}[!hbt]
 		\centering
@@ -155,7 +146,7 @@ Converting to a P2SH transaction does two things:
 
 P2SH also allows the script to be used as an address(see BIP013\cite{bip:0013:p2shaddr}). By simply sending to the script address could fund any type of complex transaction with no added complexity for the sender.
 
-The scripts can be made quite advanced enabling many layers on top of it, transactions is sometimes referred to as 'smart contracts'\footnote{First formally defined by Nick Szabo in 1994\cite{szabo:smart:contracts}}.
+The scripts can be made quite advanced enabling many layers on top of it, transactions or outputs is sometimes referred to as 'smart contracts'\footnote{First formally defined by Nick Szabo in 1994\cite{szabo:smart:contracts}}.
 
 \begin{figure}[hbt!]
 	
@@ -181,7 +172,7 @@ The scripts can be made quite advanced enabling many layers on top of it, transa
 	\label{fig:aantop:multi}
 \end{figure}
 
-One example of a more advanced script is this multisignature locking script with timelock by Antonopoulos seen in figure \ref{fig:aantop:multi}\cite{antonopoulos:bitcoin:scripting}. The script consists of three clauses, the clause executed is left to the unlocking script since the condition to \texttt{IF} is the top item on the stack, not the following item. The output could be spent by either clause being triggered:
+One example of a more advanced script is this multisignature locking script with timelocks by Antonopoulos seen in figure \ref{fig:aantop:multi}\cite{antonopoulos:bitcoin:scripting}. The script consists of three clauses, the clause executed is left to the unlocking script since the condition to \texttt{IF} is the top item on the stack, not the following item as in most languages. The output could be spent by either clause being triggered:
 \begin{itemize}
 	\item 2 out 3 of the A, B, C signatures.
 	\item 30 days passed, D signature and 1 out of A, B, C signatures.
@@ -192,6 +183,6 @@ The Lightning Network utilize many complex transactions and more will be seen in
 
 \section{Network}
 
-The Bitcoin network consists of nodes complying with the consensus protocol. In the beginning only the reference implementation was used but now there are multiple independent implementations\cite{repository:bitcoin}\cite{repository:btcd}\cite{repository:neutrino}. To participate in the consensus protocol, the nodes relay transactions and valid blocks. If the node is a mining node it also tries to find a new block hashing the previous block on the longest chain. If two valid blocks with the same height is received, the node usually work on the first received until the next block is found breaking the tie. 
+The Bitcoin network consists of nodes complying with the consensus protocol. In the beginning only the reference implementation was used but now there are multiple independent implementations\cite{repository:bitcoin}\cite{repository:btcd}\cite{repository:neutrino}. To participate in the consensus protocol, the nodes relay transactions and valid blocks. If the node is a mining node it also tries to find a new block hashing the previous block on the longest chain. If two valid blocks with the same height is received, the node usually work on the first one until the next block is found breaking the tie. 
 
 
